@@ -136,9 +136,11 @@ in Perl's symbol table and use memory accordingly.
 
 Whether or not to use L<Hash::Util>'s C<lock_ref_keys> to prevent
 modifications to the hash's keyset. Defaults to I<true>.
+The C<-nolock> option is provided as a short form of C<< lock=>0 >>.
 
 Keysets of objects created by the constructor generated by the
-C<-new> option are I<not> locked.
+C<-new> option are also locked. Versions of this module before
+v0.12 did not lock the keysets of new objects.
 
 Note that on really old Perls, that is, before Perl v5.8.9,
 L<Hash::Util> and its C<lock_ref_keys> are not available, so the hash
@@ -225,9 +227,11 @@ sub h2o {  ## no critic (RequireArgUnpacking, ProhibitExcessComplexity)
 			my $class = shift;
 			$class = ref $class if ref $class;
 			croak "Odd number of elements in argument list" if @_%2;
-			my %self = @_;
-			exists $keys{$_} or croak "Unknown argument '$_'" for keys %self;
-			return bless \%self, $class;
+			my $self = {@_};
+			exists $keys{$_} or croak "Unknown argument '$_'" for keys %$self;
+			bless $self, $class;
+			lock_ref_keys $self, keys %keys if $lock;
+			return $self;
 		};
 		{ no strict 'refs'; *{$pack.'::new'} = $sub }  ## no critic (ProhibitNoStrict)
 	}
