@@ -1,6 +1,9 @@
 Revision history for Perl extension Util::H2O.
 
 0.12	not yet released
+	- WARNING: Potentially Incompatible Changes:
+		- the constructor generated by the "-new" option now locks
+		  the new object's keyset (unless "-lock" is disabled)
 	- documented AUTOLOAD and added tests
 
 0.10	Mon, Jun  1 2020	commit 6db2a1d4cdf1a82ad2efe00f402a9596fa14cbfa
